# au

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  au  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
agent_usage_cli/: __main__.py  cli.py  detectors.py  models.py  render.py  utils.py  versioning.py
docs/: index.html  styles.css
packaging/debian/: build-deb.sh
packaging/homebrew/: agent-usage.rb  au.rb
scripts/: build_zipapp.py  check_release_version.py
tests/: test_cli.py  test_detectors.py  test_install_script.py  test_render.py  test_versioning.py
