[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-usage-cli"
version = "0.1.0"
description = "Inspect local auth state and usage context for Codex, Claude Code, and Cursor Agent."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Yunxiao Song"}
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities"
]

[project.scripts]
au = "agent_usage_cli.cli:main"
agent-usage = "agent_usage_cli.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agent_usage_cli*"]
